vendor/cvlr/cvlr-hook/tests/expand/test_hook_error2.stderr
error: Expected 1 argument
  --> tests/expand/test_hook_error2.rs:11:1
   |
11 | #[cvlr_hook_on_entry(hook(), hook2())]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `cvlr_hook_on_entry` (in Nightly builds, run with -Z macro-backtrace for more info)
